--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "lint": "eslint 'src/**/*.{json,ts,js,vue}'"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.8.0",
     "@ffflorian/jszip-cli": "^3.1.5",
     "@iconify/json": "^1.1.398",
     "@types/fs-extra": "^9.0.12",
     "@types/node": "^16.7.13",
     "@types/webextension-polyfill": "^0.8.0",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
     "@vitejs/plugin-vue": "^1.6.1",
     "@vue/compiler-sfc": "^3.2.10",
     "@vueuse/core": "^6.2.1",
@@ -37,6 +37,11 @@
     "cross-env": "^7.0.3",
     "crx": "^5.0.1",
     "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-vue": "^7.18.0",
     "esno": "^0.9.1",
     "fs-extra": "^10.0.0",
     "kolorist": "^1.5.0",
