--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "start:chromium": "web-ext run --source-dir ./extension --target=chromium",
     "start:firefox": "web-ext run --source-dir ./extension --target=firefox-desktop",
     "clear": "rimraf extension/dist extension/manifest.json extension.*",
-    "lint": "eslint '{src,scripts}/**/*.{json,ts,js,vue}'",
+    "lint": "eslint --fix '{src,scripts}/**/*.{json,ts,js,vue}'",
     "test": "vitest test"
   },
   "devDependencies": {
