Updated MV3 to reflect latest upstream changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
       "vite/client"
     ],
     "paths": {
-      "~/*": ["src/*"]
+      "~/*": ["src/*", ".eslintrc.js"]
     }
   },
   "exclude": ["dist", "node_modules"]
