--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vitesse-webext",
-  "displayName": "Vitesse WebExt",
+  "displayName": "Webext Bulma Template",
   "version": "0.0.1",
   "private": true,
   "packageManager": "pnpm@8.3.1",
@@ -27,19 +27,16 @@
     "lint": "eslint --cache .",
     "test": "vitest test",
     "test:e2e": "playwright test",
-    "postinstall": "simple-git-hooks",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.36.0",
     "@ffflorian/jszip-cli": "^3.4.1",
     "@iconify/json": "^2.2.61",
     "@playwright/test": "^1.33.0",
     "@types/fs-extra": "^11.0.1",
     "@types/node": "^18.16.5",
     "@types/webextension-polyfill": "^0.10.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@unocss/reset": "^0.51.12",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@vitejs/plugin-vue": "^4.2.1",
     "@vue/compiler-sfc": "^3.2.47",
     "@vue/test-utils": "^2.3.2",
@@ -47,32 +44,32 @@
     "chokidar": "^3.5.3",
     "cross-env": "^7.0.3",
     "crx": "^5.0.1",
-    "eslint": "^8.40.0",
+    "eslint": "^8.56.0",
+    "eslint-config-standard-with-typescript": "^43.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.5.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.19.2",
     "esno": "^0.16.3",
     "fs-extra": "^11.1.1",
     "jsdom": "^21.1.2",
     "kolorist": "^1.8.0",
-    "lint-staged": "^13.2.2",
     "npm-run-all": "^4.1.5",
     "rimraf": "^4.4.1",
-    "simple-git-hooks": "^2.8.1",
-    "typescript": "^4.9.5",
-    "unocss": "^0.51.12",
+    "typescript": "^5.3.3",
     "unplugin-auto-import": "^0.15.3",
     "unplugin-icons": "^0.16.1",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.3.5",
-    "vitest": "^0.31.0",
+    "vite": "^5.0.10",
+    "vitest": "^1.1.0",
     "vue": "^3.2.47",
-    "vue-demi": "^0.14.0",
+    "vue-demi": "^0.14.6",
     "web-ext": "^7.6.2",
     "webext-bridge": "^6.0.1",
     "webextension-polyfill": "^0.10.0"
   },
-  "simple-git-hooks": {
-    "pre-commit": "pnpm lint-staged"
-  },
-  "lint-staged": {
-    "*": "eslint --fix"
+  "dependencies": {
+    "bulma": "^0.9.4",
+    "sass": "^1.69.5"
   }
 }
