--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
       "vite/client"
     ],
     "paths": {
-      "~/*": ["src/*", ".eslintrc.js"]
+      "~/*": ["src/*"]
     }
   },
   "exclude": ["dist", "node_modules"]
